# axon

./: .geminiignore  .gitignore  GEMINI.md  README.md  SYSTEM_KNOWLEDGE_MAP.md  canvas-after-zoom.md  check_errors.py  debug_indexer.py  debug_scan.py  debug_scan_v2.py  demo.md  docker-compose.yml  reproduce_loop.spec.ts  requirements.txt  settings.json  sidebar-debug.md  start_log.txt  temporary_detailed_refactoring_plan.md  temporary_implementation_plan_crew_studio.md  temporary_implementation_plan_modal_internal_skills.md  temporary_implementation_plan_service_studio.md  temporary_plan.md  temporary_plan_implementacji_estymator.md  temporary_refactor_inter_tools_estymator.md  test.txt  test_tokens.py  tsc_output.txt  verify_crud.spec.ts
axon-app/backend/: .gitignore  AGENTS.md  add_temp_col.py  awareness_audit.py  check_artifact.py  check_crew_availability.py  check_db_crews_manager.py  check_embeddings.py  check_project.py  check_types.py  check_vector_dbs.py  check_version.py  check_versions.py  check_voice_data.py  check_voice_db.py  check_voice_raw.py  debug_db_contents.py  debug_rag_search.py  debug_sync.py  e2e_test_system_indexing.py  find_db.py  fix_extensions.py  fix_missing_type.py  list_models.py  list_projects.py  main.py  migrate_cloud_to_local.py  pyproject.toml  repro_500.py  reproduce_issue.py  seed_db.py  seed_gpt5.py  seed_inbox.py  seed_settings.py  seed_system_embeddings_all.py  test_script.py  trigger_workflow.py  update_agents.py  verify_e2e_tool_sync.py  verify_knowledge_rag.py  (+3 more)
axon-app/backend/app/: config.py
axon-app/backend/app/api/: deps.py
axon-app/backend/app/tools/: __init__.py  calculator.py  format_tool.py  network_tool.py  nip_validator.py  regex_tool.py  uuid_tool.py  weather_tool.py
axon-app/backend/migrations/: env.py
axon-app/backend/migrations/versions/: 03f60d8c3ef1_add_missing_chunking_methods.py  045969777155_add_priority_chain_to_routers.py  04e09cf04e85_add_spaces_tables.py  12506e5755be_add_canvas_data_to_spaces.py  1a822cd4cf18_add_tool_status_to_internal_tools.py  1bfd77cb19ae_add_is_draft_to_embedding_and_chunking.py  2103b78eae2f_add_metadata_to_crews.py  2a3932b10431_add_agnostic_provider_fields.py  2b0eca135f7e_add_provider_id_to_embedding_models.py  41eb441988ec_add_deleted_at_to_vnext_tables.py  454c0a8b3f89_add_interaction_mode_to_voice_meta_agent.py  473a652c2712_make_scenario_project_id_nullable.py  473b1a89bfa2_seed_zapier_automation_provider.py  55f7f847b6ca_add_pricing_discovery_fields_to_.py  5d64a4c5542e_update_router_strategies.py  5dafe554fb60_add_vnext_agent_fields.py  5f0314dd3c96_gate_0_vnext_schema.py  601f44fa06a7_enable_rls_gate_0_tables.py  6208e2095021_add_rag_semantic_cache_and_feedback_.py  6aa628d46bea_add_vector_database_config.py  6b293c067de9_update_projects_and_add_inbox.py  7799779ca73a_add_system_embeddings_table.py  84e1220e1e8e_sync_settings_crud.py  8a369e2bf021_add_service_schemas.py  (+24 more)
axon-tools/backend/: pyproject.toml
backend/: Dockerfile  README.md  check_artifact.py  check_db_crew_agents.py  check_ids.py  classify_templates.py  main.py  pyproject.toml  seed_db.py  seed_inbox.py  seed_workspaces.py  start.sh
backend/app/: config.py
backend/app/api/: deps.py
backend/migrations/: env.py
backend/migrations/versions/: 0d03792a31f3_add_deleted_at_to_workspace_tables.py  5dafe554fb60_add_vnext_agent_fields.py  6b293c067de9_update_projects_and_add_inbox.py  92eb361d10df_enable_rls_policies.py  c666a116d70b_add_workflows_and_scenarios_tables.py  cba1c5362b01_add_data_interface_to_crews.py  ce605a459f10_add_owner_id_to_spaces.py  d603bce469d5_add_assets_table.py  da0ef98d7a99_init_schema_indexes_logs.py  e743c61acaa7_add_missing_fields_to_agentconfig.py
frontend/wasm-engine/: Cargo.toml
frontend/wasm-engine/src/: lib.rs
(+3470 files in other folders)
