[project]
name = "axon-tools"
version = "0.1.0"
description = "Lokalne środowisko deweloperskie dla Internal Tools w Axon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "typer>=0.12.3",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
axon-tools = "axon_tools.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axon_tools"]
