[package]
name = "axon-wasm-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement"
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for small binary size
opt-level = "s"
lto = true
